# programmingproblems

./: .gitignore  study - Shortcut.lnk
2d/: circle.cpp  input.txt
Gears/: Gears.cbp  README.md  main.cpp  main.py  readme.md
Gears2/: CMakeLists.txt  main.cpp
Hamming/: input.txt  main.cpp  output.txt
Iosif/: cycleMove.cpp  main.cpp
LinkedList/: CMakeLists.txt  LinkedList.h  main.cpp
TextFile/: CMakeLists.txt  TextFile.cpp  TextFile.h  main.cpp
checkers/: checker.cpp  checker.h  king.cpp  king.h  piece.cpp  piece.h
chess/: horse.cpp  main.cpp
e/: e2.cpp  genE.cpp  withE.cpp
fibonachi/: main.cpp
fig/: CMakeLists.txt  Figure.cpp  Figure.h  main.cpp
fig/figure_lib/: Ellipse.cpp  Ellipse.h  Figure.cpp  Figure.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h
figures/: direction.cpp
fraction2/: CMakeLists.txt  main.cpp  rational.cpp  rational.h
graph/: CMakeLists.txt  Graph.cpp  Graph.h
matrix/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
myVector/: CMakeLists.txt  main.cpp  newVector.cpp  newVector.h
py1/: 1.py  2.py  armstrong.py  engaged.py  friendly.py
py10/: main.py
py11/: main.py
py12/: 3dVector.py  Vector.py
py13/: task1.py  task2.py
py14/: task1.py  task2.py
py15/: task1.py  task2.py
py16/: task1.py  task2.py
py17/: task1.py
py18/: task1.py  task2.py  task3.py  task4.py
py19/: task1.py  task2.py
py2/: 5-1.py  5-2.py
py21/: task.py
py3/: 5-1.py  5-2.py  star-1.py  star-2.py  umn.py
py4/: main.py
py5/: 5-1.py  5-2.py  star-1.py  star-2.py
py6/: 5-1.py  5-2.py
(+53 files in other folders)
